--- a/index.html
+++ b/index.html
@@ -14,19 +14,21 @@
   <div class="container">
     <div class="email">
       <p class="email__subject">Nabídka práce</p>
-      <div class="email__body">
+      <div class="email__content">
         <p class="email__greeting">Vážený pane, vážená paní XXX,</p>
 
-        <p>
-          reaguji na nabídku práce na pozici <em>junior frontend vývojářka</em>, kterou Vaše společnost inzerovala na
-          portálu Jobs.cz. Z nabídek práce v tomto oboru mě zaujala právě ta Vaše, jelikož mě láká práce v dynamickém
-          prostředí nadnárodní společnosti, která nabízí možnost dalšího vzdělávání a profesního růstu. Zároveň věřím,
-          že vzhledem ke svým pracovním zkušenostem a schopnostem splňuji předpoklady pro inzerovanou pozici.
-        </p>
+        <div class="email__body">
+          <p>
+            reaguji na nabídku práce na pozici <em>junior frontend vývojářka</em>, kterou Vaše společnost inzerovala na
+            portálu Jobs.cz. Z nabídek práce v tomto oboru mě zaujala právě ta Vaše, jelikož mě láká práce v dynamickém
+            prostředí nadnárodní společnosti, která nabízí možnost dalšího vzdělávání a profesního růstu. Zároveň věřím,
+            že vzhledem ke svým pracovním zkušenostem a schopnostem splňuji předpoklady pro inzerovanou pozici.
+          </p>
 
-        <p>
-          Více informací o mně naleznete v přiloženém životopisu, případně mě kontaktujte na tomto emailu.
-        </p>
+          <p>
+            Více informací o mně naleznete v přiloženém životopisu, případně mě kontaktujte na tomto emailu.
+          </p>
+        </div>
 
         <p class="email__closing">Pozdrav</p>
       </div>
